# FastAPI_test

./: alembic.ini  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_11_18_1627-fbaefcb28037_create_products.py  2023_11_19_1104-995b59604d65_create_user_table.py  2023_11_19_1159-c5264431caaf_create_posts_table.py  2023_11_19_1219-9bd3912a2aae_create_pofile_table.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  post.py  product.py  profile.py  user.py
users/: schemas.py  views.py
